--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-torch>=1.10.0
-torchvision>=0.11.1
-torchaudio>=0.10.0
-pandas>=1.3.4
-matplotlib>=1.2.1
-numpy>=1.4
+torch~=1.10.0
+torchvision~=0.11.1
+torchaudio~=0.10.0
+pandas~=1.3.4
+matplotlib~=1.21.4
+numpy >= 1.4
